# ECAL

./: README.md
Ecal/: README.md  setup.cfg
Ecal/src/Ecal/: multiareasystem.py  series.py  shunt.py  singleareasystem.py  testingtransformer.py  threephaseIM.py
Ecal/src/Ecal_mano1206r.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
