[metadata]
name = Ecal-mano1206r
version = 0.0.1
author = Mano Ranjith, Tharun
author_email = manoranjith1206@gmail.com
description = A package to calculate electrical calculation
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src